design system & techcnology values

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -17,3 +17,14 @@
 #main-subtitle {
     margin-top: 11rem;
 }
+body {
+    color: #333;
+}
+
+a {
+    color: #3B59A4;
+}
+
+a.btn {
+    border-radius:4px;
+}
