--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -4,4 +4,13 @@ Add styles or override variables from the theme here.
 
 */
 
-$primary: #3f8f1b !default;
+$primary: #2E323D !default;
+$secondary: #F2F3F5 !default;
+$warning: #C39844 !default;
+$light: #E8E9EB !default;
+$info: #D1DEFF !default;
+$success: #5AB030 !default;
+$danger: #E6615E !default;
+$border-color: #464C5C !default;
+$google_font_name: "Roboto" !default;
+$google_font_family: "Roboto:300,300i,400,400i,700,700i" !default;
