Sync API Design principles

--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -8,7 +8,8 @@ $primary: #2E323D !default;
 $secondary: #F2F3F5 !default;
 $warning: #C39844 !default;
 $light: #E8E9EB !default;
-$info: #D1DEFF !default;
+$dark: #403F4C !default;
+$info: #3B59A4 !default;
 $success: #5AB030 !default;
 $danger: #E6615E !default;
 $border-color: #464C5C !default;
