improved index page

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -65,3 +65,9 @@ ul.navbar-nav .dropdown {
     display: inline !important;
     padding-inline-start: 0 !important;
 }
+
+#td-cover-block-people {
+    background-image: url('/images/people.jpg');
+    padding-top: 3rem;
+    padding-bottom: 10rem;
+}
