--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -65,6 +65,10 @@ ul.navbar-nav .dropdown {
     cursor: pointer;
 }
 
+.glossary-item {
+    margin-right: 5px;
+}
+
 .glossary-text * {
     display: inline !important;
     padding-inline-start: 0 !important;
