--- a/layouts/partials/feedback.html
+++ b/layouts/partials/feedback.html
@@ -33,25 +33,25 @@
     noButton.disabled = true;
   };
   const sendFeedback = (value) => {
-    if (typeof ga !== 'function') return;
-    const args = {
-      command: 'send',
-      hitType: 'event',
-      category: 'Helpful',
-      action: 'click',
-      label: window.location.pathname,
-      value: value
-    };
-    ga(args.command, args.hitType, args.category, args.action, args.label, args.value);
+    if (typeof dataLayer !== 'function') return;
+    dataLayer.push({
+    'event': 'LeroyMerlin_new',
+    'eventAction': 'click',
+    'eventCategory': 'Interactions',
+    'eventLabel': 'button',
+    'eventLocation': window.location.pathname, 
+    'eventContent': value, 
+    'eventContext': 'Полезность'
+    });
   };
   yesButton.addEventListener('click', () => {
     yesResponse.classList.add('feedback--response__visible');
     disableButtons();
-    sendFeedback(1);
+    sendFeedback('Yes');
   });
   noButton.addEventListener('click', () => {
     noResponse.classList.add('feedback--response__visible');
     disableButtons();
-    sendFeedback(0);
+    sendFeedback('No');
   });
 </script>
