--- a/layouts/shortcodes/blocks/cover.html
+++ b/layouts/shortcodes/blocks/cover.html
@@ -1,8 +1,7 @@
 {{ $_hugo_config := `{ "version": 1 }` }}
 {{ $blockID := printf "td-cover-block-%d" .Ordinal }}
-{{ $promo_image := (.Page.Resources.ByType "image").GetMatch "**people*" }}
+{{ $promo_image := (.Page.Resources.ByType "image").GetMatch "**background*" }}
 {{ $col_id := .Get "color" | default "dark" }}
-{{ $iconright := .Get "icon-right" }}
 {{ $image_anchor := .Get "image_anchor" | default "smart" }}
 {{/* Height can be one of: auto, min, med, max, full. */}}
 {{ $height := .Get "height" | default "max" }}
@@ -27,15 +26,16 @@
 {{ end }}
 <section id="{{ $blockID }}" class="row td-cover-block td-cover-block--height-{{ $height }} js-td-cover td-overlay td-overlay--dark -bg-{{ $col_id }}">
   <div class="container td-overlay__inner">
-    <div class="row pt-3">
-      <div class="col-10 h5 text-right">
-          {{ .Inner | markdownify}}
+    <div class="row">
+      <div class="col-12">
+        <div class="text-center">
+          {{ with .Get "title" }}<h1 class="display-1 mt-0 mt-md-5 pb-4">{{ $title := . }}{{ $title | html }}</h1>{{ end }}
+          {{ with .Get "subtitle" }}<p class="display-2 text-uppercase mb-0">{{ . | html }}</p>{{ end }}
+          <div class="pt-3 lead">
+            {{ .Inner | markdownify }}
+          </div>
+        </div>
       </div>
-      {{ with $iconright }}
-			<div class="col-2">
-				<i class="fa fa-{{ . }} giant-icon"></i>
-			</div>
-			{{ end }}
     </div>
   </div>
   {{ if $byline }}
