fixed css on a small devices

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -135,3 +135,8 @@ table.dataTable {
 .giant-icon {
     font-size: 86pt;
 }
+
+.td-box .row {
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
