--- a/layouts/shortcodes/blocks/icon.html
+++ b/layouts/shortcodes/blocks/icon.html
@@ -5,10 +5,10 @@
 <section class="row td-box td-box--{{ $col_id }} position-relative td-box--gradient td-box--height-{{ $height }}">
 	<div class="container mb-0">
 		<div class="row">
-			<div class="col-2">
+			<div class="col-lg-2 col-sm-12 pb-3">
 				<i class="fab fa-fort-awesome giant-icon"></i>
 			</div>
-			<div class="col-10 h5">
+			<div class="col-lg-10 h5 col-sm-12">
 				{{ .Inner | markdownify }}
 			</div>
 		</div>
