--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -132,6 +132,10 @@ table.dataTable {
     margin-top: 8rem !important;
 }
 
+.td-cover-block--height-min {
+    min-height: 350px;
+}
+
 .giant-icon {
     font-size: 86pt;
 }
