--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -136,6 +136,10 @@ table.dataTable {
     min-height: 350px;
 }
 
+.td-cover-block--height-max {
+    min-height: 600px;
+}
+
 .giant-icon {
     font-size: 86pt;
 }
