changed gtm data

--- a/layouts/partials/feedback.html
+++ b/layouts/partials/feedback.html
@@ -50,8 +50,8 @@
     'event': 'LeroyMerlin_new',
     'eventAction': 'click',
     'eventCategory': 'Interactions',
-    'eventLabel': 'button',
-    'eventLocation': window.location.pathname, 
+    'eventLabel': 'emotions',
+    'eventLocation': document.location.pathname, 
     'eventContent': value, 
     'eventContext': 'Полезность'
     });
