video popup bugfix

--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -62,7 +62,7 @@
 	youTubeChannelURL:"https://www.youtube.com/channel/UCIqfZ4wqEoC6x6x-zyPCL8g",
 	youmaxDefaultTab:"UPLOADS",
 	youmaxColumns:4,
-	showVideoInLightbox:true,
+	showVideoInLightbox:false,
 	maxResults: 4,
 });
 </script>
