youtube widget fixes

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -166,9 +166,9 @@ table.dataTable {
 
 .youmax-video-tnail-box {    margin-bottom: 15px;overflow:hidden;box-shadow:inset 0 1px 0 rgba(255, 255, 255, 0.25), 0 1px 3px rgba(0, 0, 0, 0.2);cursor:pointer;cursor:hand;  background-color: white;}
 
-#youmax-encloser { padding-top: 20px;}
+#youmax-encloser {}
 
-#youmax-video-list-div {}
+#youmax-video-list-div { padding-top: 20px; }
 
 .youmax-video-list-title {color:#438bc5;display: inline-block;padding:2% 10px; padding-bottom: 0px;font-weight:bold;max-width:250px;max-height:50px;overflow:hidden;}
 
