css fixes and moving to other cors proxy

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -258,3 +258,13 @@ iframe#youmax-video {
 .promoting-card {
     border: none;
 }
+
+@media (max-width: 576px) {
+    .habrText {
+        display: none;
+    }    
+
+    .youmax-subscribe {
+        margin-bottom: 0;
+    }
+}
