--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -91,7 +91,7 @@ ul.navbar-nav .dropdown {
     white-space: nowrap;
 }
 
-.td-content table code.platform, .td-content p code.platform {
+.td-content table code.framework, .td-content p code.framework {
     background-color: #ad4b00;
     color: #FFF;
     margin-right: 2px;
